# AutoReport

./: .gitignore  README.md  clean.py  config.py  find_api_keys.py  main.py  pyproject.toml  requirements.txt  server.py  show_devices.py  test_volume.py
src/: audio_stream.py  audio_utils.py  folder_utils.py  open_ai.py  silence.py  transcript_utils.py
src/client/: main.py
src/server/: index.html  main.py
test/: index.html  server.py
